[APD-1296] setting overflow on `gallery-image` to ensure the placeholder is not crazy big before lazyloaded images render

--- a/components/features/gallery/default.scss
+++ b/components/features/gallery/default.scss
@@ -535,6 +535,7 @@
     background: #393f4d;
     width: auto;
     margin: 0 5px;
+    overflow: hidden;
 
     .is-focused {
       opacity: 1;
